--- a/app/[name]/@modal/.component/pageList.module.css
+++ b/app/[name]/@modal/.component/pageList.module.css
@@ -65,6 +65,7 @@
 
 .pageListBody {
     width: 100%;
+    height: 500px;
     display: flex;
     flex-direction: column;
 }
@@ -87,7 +88,7 @@
 }
 
 .card:hover::before {
-    content: "➤";
+    content: "->";
     position: absolute;
     font-size: 20px;
     left: 7px;
@@ -106,7 +107,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-bottom: 15px;
+    /*padding-bottom: 15px;*/
 }
 
 .card > div:nth-child(2) > span:first-child {
@@ -115,7 +116,14 @@
     line-height: 29px;
 }
 
-.card > div:nth-child(2) > span:last-child {
+.card > div:nth-child(2) > span:nth-child(2) {
+    font-size: 12px;
+    line-height: 17px;
+    opacity: 0.5;
+}
+
+.card > div:nth-child(2) > span:nth-child(3) {
+    margin-top: 8px;
     font-size: 12px;
     line-height: 17px;
     opacity: 0.5;
@@ -163,6 +171,8 @@
     font-size: 18px;
     line-height: 25px;
     padding: 0 5px;
+    min-width: 30px;
+    text-align: center;
 }
 
 .pageListBottom > a {
@@ -178,7 +188,13 @@
     opacity: 1;
 }
 
-.pageListBottom > div {
+.pageListBottom > .emptyBox {
+    width: 25px;
+    height: 25px;
+    background: none;
+}
+
+.paginationSearch {
     position: absolute;
     bottom: 50px;
     right: 30px;
@@ -189,7 +205,7 @@
     gap: 10px;
 }
 
-.pageListBottom > div > input {
+.paginationSearch > input {
     background: none;
     border: none;
     outline: none;
@@ -199,12 +215,12 @@
     width: 30px;
 }
 
-.pageListBottom > div > button {
+.paginationSearch > button {
     cursor: pointer;
     opacity: 30%;
 }
 
-.pageListBottom > div > button:hover {
+.paginationSearch > button:hover {
     opacity: 1;
 }
 
