--- a/app/globals.css
+++ b/app/globals.css
@@ -77,28 +77,39 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-size: 16px
 }
 
 html,
 body {
-  max-height: 100vh;
+  min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
+  background: rgb(var(--background-end-rgb));
+  /*
   background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
+   */
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  background: none;
+  border: none;
+  color: black;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -166,13 +177,22 @@ article >  section > p {
   font-style: italic;
 }
 
+.strikethrough {
+  text-decoration: line-through;
+}
+
+.highlight {
+  background-color: rgba(255, 208, 0, 0.4);
+}
+
+
+
+
 .underline {
   text-decoration: underline;
 }
 
-.strike{
-  text-decoration: line-through;
-}
+
 
 /* 반응형 디자인을 위한 미디어 쿼리 */
 @media (max-width: 768px) {
