--- a/app/globals.css
+++ b/app/globals.css
@@ -218,17 +218,6 @@ article >  section > p {
   }
 }
 
-
-dialog::backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 1000; /* Ensure it is on top of other content */
-}
-
-dialog:modal{
-  position: fixed;
+button {
+  cursor: pointer;
 }
